# automating-the-boring-stuff-with-python-third-edition

./: pyproject.toml
06_automate_the_boring_stuff_with_python_third_edition/03-chapter-03/: guessTheNumber.py
06_automate_the_boring_stuff_with_python_third_edition/04-chapter-04/: helloFunc.py  zeroDivide.py
06_automate_the_boring_stuff_with_python_third_edition/05-chapter-05/: boxPrint.py  factorialLog.py  factorialLog.txt
06_automate_the_boring_stuff_with_python_third_edition/06-chapter-06/: allMyCats2.py  magic8Ball2.py
