[tool.poetry]
name = "06-automate-the-boring-stuff-with-python-third-edition"
version = "0.1.0"
description = ""
authors = ["Jerrison Li <jerrisonli@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
black = "^25.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
